# quick-adc

./: CMakeLists.txt  LICENSE  LibsPath.cmake  README.md  binheap.hpp  common.hpp  config.h  convert-quantizer.py  databases.cpp  databases.hpp  db_add.cpp  db_query.cpp  db_query_4.cpp  distances.cpp  distances.hpp  envvars.sh  flatdb_create.cpp  getdeps.sh  indexdb_create1.cpp  indexdb_create2.cpp  neighbors.cpp  neighbors.hpp  quantizers.cpp  quantizers.hpp  query_common.hpp  recall.hpp  simd_layout.hpp  simd_scan.hpp  split_vecs.cpp  vector_file.hpp  vector_io.cpp  vector_io.hpp
